feat: Add support for compound rules and nested condition groups, including LinkedIn job title extraction and circular dependency detection.

--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
     "name": "content-filter-pro",
     "version": "1.1.1",
     "description": "Chrome extension for content filtering",
+    "type": "module",
     "scripts": {
-        "test": "jest",
+        "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
         "test:watch": "jest --watch",
         "test:coverage": "jest --coverage",
         "package": "zip -r release.zip manifest.json src icons"
